ansible-terraform/modules/06-nodes.tf
//  Create an SSH keypair
resource "aws_key_pair" "keypair" {
  key_name   = "${var.key_name}"
  public_key = "${file(var.public_key_path)}"
}

//  Create the master userdata script.
data "template_file" "setup-master" {
  template = "${file("${path.module}/files/setup-master.sh")}"
  vars {
    availability_zone = "${lookup(var.subnetaz, var.region)}"
  }
}

// Create Elastic IP for master
resource "aws_eip" "master_eip" {
  instance = "${aws_instance.master.id}"
  vpc      = true
}

//  Launch configuration for the consul cluster auto-scaling group.
resource "aws_instance" "master" {
  ami                  = "${data.aws_ami.amazonlinux.id}"
  instance_type        = "${var.amisize}"
  subnet_id            = "${aws_subnet.public-subnet.id}"
  iam_instance_profile = "${aws_iam_instance_profile.hacep-instance-profile.id}"
  user_data            = "${data.template_file.setup-master.rendered}"

  vpc_security_group_ids = [
    "${aws_security_group.hacep-vpc.id}",
    "${aws_security_group.hacep-public-ingress.id}",
    "${aws_security_group.hacep-public-egress.id}",
  ]
  
  root_block_device {
    volume_size = 20
    volume_type = "gp2"
  }

  key_name = "${aws_key_pair.keypair.key_name}"

  //  Use our common tags and add a specific name.
  tags = "${merge(
    local.common_tags,
    map(
      "Name", "HACEP Master"
    )
  )}"
}

//  Create the node userdata script.
data "template_file" "setup-node" {
  template = "${file("${path.module}/files/setup-node.sh")}"
  vars {
    availability_zone = "${lookup(var.subnetaz, var.region)}"
  }
}

// Create Elastic IP for the nodes
resource "aws_eip" "node1_eip" {
  instance = "${aws_instance.node1.id}"
  vpc      = true
}

resource "aws_eip" "node2_eip" {
  instance = "${aws_instance.node2.id}"
  vpc      = true
}

resource "aws_eip" "node3_eip" {
  instance = "${aws_instance.node3.id}"
  vpc      = true
}

//  Create the two nodes. This would be better as a Launch Configuration and
//  autoscaling group, but I'm keeping it simple...
resource "aws_instance" "node1" {
  ami                  = "${data.aws_ami.amazonlinux.id}"
  instance_type        = "${var.amisize}"
  subnet_id            = "${aws_subnet.public-subnet.id}"
  iam_instance_profile = "${aws_iam_instance_profile.hacep-instance-profile.id}"
  user_data            = "${data.template_file.setup-node.rendered}"

  vpc_security_group_ids = [
    "${aws_security_group.hacep-vpc.id}",
    "${aws_security_group.hacep-public-ingress.id}",
    "${aws_security_group.hacep-public-egress.id}",
  ]

  root_block_device {
    volume_size = 10
    volume_type = "gp2"
  }

  key_name = "${aws_key_pair.keypair.key_name}"

  //  Use our common tags and add a specific name.
  tags = "${merge(
    local.common_tags,
    map(
      "Name", "HACEP Node 1"
    )
  )}"
}

resource "aws_instance" "node2" {
  ami                  = "${data.aws_ami.amazonlinux.id}"
  instance_type        = "${var.amisize}"
  subnet_id            = "${aws_subnet.public-subnet.id}"
  iam_instance_profile = "${aws_iam_instance_profile.hacep-instance-profile.id}"
  user_data            = "${data.template_file.setup-node.rendered}"

  vpc_security_group_ids = [
    "${aws_security_group.hacep-vpc.id}",
    "${aws_security_group.hacep-public-ingress.id}",
    "${aws_security_group.hacep-public-egress.id}",
  ]

  root_block_device {
    volume_size = 10
    volume_type = "gp2"
  }

  key_name = "${aws_key_pair.keypair.key_name}"

  //  Use our common tags and add a specific name.
  tags = "${merge(
    local.common_tags,
    map(
      "Name", "HACEP Node 2"
    )
  )}"
}

resource "aws_instance" "node3" {
  ami                  = "${data.aws_ami.amazonlinux.id}"
  instance_type        = "${var.amisize}"
  subnet_id            = "${aws_subnet.public-subnet.id}"
  iam_instance_profile = "${aws_iam_instance_profile.hacep-instance-profile.id}"
  user_data            = "${data.template_file.setup-node.rendered}"

  vpc_security_group_ids = [
    "${aws_security_group.hacep-vpc.id}",
    "${aws_security_group.hacep-public-ingress.id}",
    "${aws_security_group.hacep-public-egress.id}",
  ]

  root_block_device {
    volume_size = 10
    volume_type = "gp2"
  }

  key_name = "${aws_key_pair.keypair.key_name}"

  //  Use our common tags and add a specific name.
  tags = "${merge(
    local.common_tags,
    map(
      "Name", "HACEP Node 3"
    )
  )}"
}
